UIUX-1051 - fixing alignment of footer values in forecasts

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -143,6 +143,8 @@ table.dataTable {
     td {
       font-weight: bold;
       border-top: 2px solid @grayLight;
+      padding-left: 4px;
+      padding-right: 4px;
     }
     tr.overall th {
       font-weight: bold;
@@ -552,7 +554,7 @@ FLEXLIST GENERIC */
     }
     & > tbody > tr > td {
       &.editableColumn {
-        padding: 0px 2px;
+        padding: 0px 4px;
         min-width: 80px;
         max-width: 100%;
         height: 37px;
@@ -561,7 +563,6 @@ FLEXLIST GENERIC */
         }
         span.detail,
         span.list {
-          padding-right: 8px;
           padding-left: 14px;
         }
         span.detail:hover,
@@ -611,7 +612,7 @@ FLEXLIST GENERIC */
         }
       }
       .isEditable {
-        padding: 4px 10px 3px 3px;
+        padding: 4px 0px 3px 3px;
         &.active {
           padding: 1px 0px 1px 0px;
         }
